# agent_cortex_v2

./: .gitignore  README.md  agent.py  longterm_memory.py  main.py  pyproject.toml  pyrightconfig.json
data/: loader.py
data/documents/: bristol_fourth.txt  carnival.txt  fireworks.txt  parade.txt
handlers/: spinner.py
models/: embedding_model.py
scripts/: test_retrieval.py  test_websearch.py
tools/: calculator.py  fact_saver.py  fallback.py  guarded_retriever.py  longterm_memory.py  python_REPL.py  reasoning.py  retriever.py  websearch.py
